testsuite/tests/lexical_envs/invalid_categories/test.out
== test.lkt ==
test.lkt:13:37: error: Positional arguments not allowed for RefCategories
13 |     fun f(b: Bool): RefCategories = RefCategories(b)
   |                                     ^^^^^^^^^^^^^^^^


lkt_compile: Done
